hphp/hack/test/typecheck/reactive/await_in_rx1.php.exp
File "await_in_rx1.php", line 11, characters 8-10:
This value has Awaitable type. Awaitable typed values in reactive code must be either immediately await'ed or passed as arguments to 'genva' function. (Typing[4248])
