hphp/hack/test/typecheck/reactive/await_in_rx1.php
<?hh // strict

async function f()[rx]: Awaitable<int> {
  return 1;
}


async function g()[rx]: Awaitable<void> {
  // error
  $a = f();
  $b = await $a;
}
